--- a/project/timeline/style.css
+++ b/project/timeline/style.css
@@ -12,9 +12,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #5b636b;
-  --body-margin: 8px;
-  padding: 0px;
-  margin: var(--body-margin);
+}
+
+div, ul, li, h3, h1, p {
+  margin: auto;
+  padding: 0;
 }
 
 a {
