--- a/partials/nav-home.html
+++ b/partials/nav-home.html
@@ -25,13 +25,13 @@
         <div class="site_branding">
           <h1 class="text_logo">
             <a href="../index.html" rel="home">STUDIO MILLMINT
-              <img src='../images/flower.png' height='25' width='25' /></a>
+              <img src='../images/flower.png' height='25' width='25' />
+            </a>
           </h1>
         </div>
 
         <!-- Place header control before main menu if site title is enabled -->
         <div class="header_controls">
-
           <div class="header_sliding_sidebar_control header_control_wrapper">
             <a id="user_control_icon" class="sliding_sidebar_button" href="#">
               <i class="fa fa-bars header_control_icon"></i><style> {margin-top: 10px;} </style>
