--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -18,16 +18,16 @@
 </head>
 
 <!-- header -->
-<header>
-<div id="page" class="site">
-  <div class="sticky_header_nav_wrapper header_nav_wrapper">
+<header class="site_header">
+  <div class="header_nav_wrapper unsticky_header_nav_wrapper">
     <div class="header_nav">
-
       <div class="navcontainer">
         <div class="site_branding">
-          <h1 class="text_logo"><a href="../../index.html" rel="home">STUDIO MILLMINT <img src='../../images/flower.png'
-                height='25' width='25' />
-            </a></h1>
+          <h1 class="text_logo">
+            <a href="../../index.html" rel="home">STUDIO MILLMINT
+              <img src='../../images/flower.png' height='25' width='25'/>
+            </a>
+          </h1>
         </div>
 
 
