--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -18,7 +18,7 @@
 
 <!-- header -->
 <header class="site_header">
-  <div class="sticky_header_nav_wrapper header_nav_wrapper header_is_stick">
+  <div class="header_nav_wrapper header_is_stick">
     <div class="header_nav">
       <div class="navcontainer">
         <div class="site_branding">
