--- a/css/default.css
+++ b/css/default.css
@@ -105,7 +105,12 @@ a:link {
   float: left;
 }
 
-.hr {
-  width: 1px;
-  background-color: black;
+.container {
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+.container::-webkit-scrollbar { /* WebKit */
+    width: 0;
+    height: 0;
 }
